--- a/indext.html
+++ b/indext.html
@@ -9,7 +9,8 @@
     <div id="box_login">
         <form method="post" action="">
             <input type="text" name="name" placeholder="ID">
-            <input type="password" name="password" placeholder="password">
+            <input type="password" name="password" placeholder="password"><br>
+            <input type="submit"> <input type="reset">
         </form>
         <ul>
             <li><a href="./iscriviti.html">Iscriviti</a></li>
