--- a/indext.html
+++ b/indext.html
@@ -13,7 +13,7 @@
         <form method="post" action="">
             <input type="text" name="name" placeholder="ID">
             <input type="password" name="password" placeholder="password">
-        	<input type="submit onClick="validateID(document.getElementsByName('name')[0].value)""> 
+        	<input type="submit" onClick="validateID(document.getElementsByName('name')[0].value)"> 
            	<input type="reset">
         </form>   
         <a href="./iscriviti.html">Iscriviti</a>
