modificato sfondo e aggiunta bordi tondi

--- a/indext.html
+++ b/indext.html
@@ -9,7 +9,7 @@
         <header>
             <img src="img/testata.png" alt="img_testata">
         </header>
-        
+    <div id="main_page" class="cbordi">
         <form method="post" action="">
             <input type="text" name="name" placeholder="ID">
             <input type="password" name="password" placeholder="password">
@@ -18,9 +18,10 @@
         </form>   
         <a href="./iscriviti.html">Iscriviti</a>
         <a href="./pwlost.html">Password dimenticata</a>
+    </div>
 </body>
 <script async src="js/logic.js"></script>
-</html>
+</html> 
 
 
 <!--
