--- a/indext.html
+++ b/indext.html
@@ -11,6 +11,7 @@
         </header>
     <div id="main_page" class="cbordi">
         <article>
+            <h1>Istruzioni</h1>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc efficitur, magna vitae congue elementum, nulla augue lobortis orci, sed tincidunt purus urna a mauris. Duis facilisis ut enim ac venenatis. Nullam odio urna, condimentum et pellentesque sit amet, viverra at leo. Morbi nisl elit, consequat nec rutrum eget, eleifend sed nibh. Nulla purus quam, efficitur sit amet libero eu, rhoncus fermentum dui. Proin neque lacus, venenatis sed dui tempus, cursus posuere urna. Donec tristique dui a convallis consectetur. In dictum velit mauris. Proin facilisis rhoncus maximus. Maecenas ipsum diam, suscipit at mollis eu, tempor sed sapien. Aliquam erat volutpat.
 
@@ -19,13 +20,13 @@ Suspendisse in dolor at tortor interdum ultricies quis laoreet ipsum. Donec eget
 Proin non felis dictum, gravida quam quis, varius tortor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec tristique tellus euismod aliquet pellentesque. Fusce sed felis a nibh ultrices luctus non ut orci. Phasellus iaculis metus at odio blandit dapibus et sit amet ipsum. Aliquam eros elit, consectetur sit amet sem sed, malesuada pellentesque eros. Nulla facilisi. Vivamus aliquam, sapien ut posuere vulputate, magna diam sollicitudin lectus, sed elementum erat tellus ut elit. Cras consequat risus sed lacus euismod, eu tempor augue varius. Etiam facilisis, augue nec dignissim euismod, purus ligula tempus purus, eu imperdiet enim velit vel.
             </p>
         </article>
+        <h1>Accedi per votare</h1>
         <form method="post" action="">
             <input type="text" name="name" placeholder="ID">
             <input type="password" name="password" placeholder="password">
-        	<input type="submit" onClick="login()"> 
-           	<input type="reset">
+        	<input type="submit" name="Accedi" onClick="login()"> 
+           	<input type="button" name="Registrati" value="Registrati" >
         </form>   
-        <a href="./iscriviti.html">Iscriviti</a>
         <a href="./pwlost.html">Password dimenticata</a>
     </div>
 </body>
