zucchero per index

--- a/indext.html
+++ b/indext.html
@@ -7,7 +7,7 @@
 </head>
 <body> 
         <header>
-            <img src="img/testata.png" alt="img_testata">
+            <img src="img/testata1.png" alt="img_testata">
         </header>
     <div id="main_page" class="cbordi">
         <article>
@@ -37,6 +37,9 @@
     </table>
     </div>
     </div>
+ <footer>
+    <p>progetto LTW Davide Di Campi e Tiziano Colagrossi &copy; 2018</p>    
+</footer>
 </body>
 <script async src="js/logic.js"></script>
 </html> 
