--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         	<tr>
                 <td colspan="2">
                     <input type="submit" name="Accedi" onClick="login()"> 
-           	        <input type="button" name="Registrati" value="Registrati" >
+           	        <input type="button" value="Registrati" onClick="window.location.href='registrati.html'">
                 </td>
             </tr>
             <tr>                
