--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <header>
             <img src="img/testata1.png" alt="img_testata">
         </header>
-    <div id="main_page" class="cbordi">
+    <div id="main_page" class="bordi_rot">
         <article>
             <h1>Portale del votatore</h1>
             <p>
