aggiunta pagina registrati.html e il relativo file css e aggiornato i collegamenti dalla pagina indext alla pagina registrati

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
         <header>
             <img src="img/testata1.png" alt="img_testata">
         </header>
-    <div id="main_page" class="bordi_rot">
+    <div id="main_page">
         <article>
             <h1>Portale del votatore</h1>
             <p>
                 Benvenuto nel nuovo portale ideato per permettere di votare da casa ai cittadini di roma capitale
-                se è la prima volta che visiti questo portale devi prima iscriverti <a href="">qui</a> 
+                se è la prima volta che visiti questo portale devi prima iscriverti <a href="registrati.html">qui</a> 
             </p>
         </article>
     <div id="login_area"> 
         <h1>Accedi per votare</h1>
     <table>
-        <form method="post" action="">
+        <form method="post" action="" name="login">
             <tr><td><input type="text" name="name" placeholder="ID"></td><td><input type="password" name="password" placeholder="password"></td></tr>
         	<tr>
                 <td colspan="2">
