--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
         </header>
     <div id="main_page">
         <article>
-            <h1>Portale del votatore</h1>
+            <h1>Portale del votante</h1>
             <p>
-                Benvenuto nel nuovo portale ideato per permettere di votare da casa ai cittadini di roma capitale
-                se è la prima volta che visiti questo portale devi prima iscriverti <a href="registrati.html">qui</a> 
+                Benvenuto nel nuovo portale ideato per permettere ai cittadini di Roma capitale di votare da casa.
+                Se &egrave la prima volta che visiti questo portale devi prima iscriverti <a href="registrati.html">qui</a> 
             </p>
         </article>
     <div id="login_area"> 
         <h1>Accedi per votare</h1>
     <table>
         <form method="post" action="" name="login">
-            <tr><td><input type="text" name="name" placeholder="ID"></td><td><input type="password" name="password" placeholder="password"></td></tr>
+            <tr><td><input type="text" name="name" placeholder="ID"></td><td><input type="password" name="password" placeholder="Password"></td></tr>
         	<tr>
                 <td colspan="2">
                     <input type="submit" name="Accedi" onClick="login()"> 
@@ -38,7 +38,7 @@
     </div>
     </div>
  <footer>
-    <p>progetto LTW Davide Di Campi e Tiziano Colagrossi &copy; 2018</p>    
+    <p>Progetto LTW Davide Di Campi e Tiziano Colagrossi &copy; 2018</p>    
 </footer>
 </body>
 <script async src="js/logic.js"></script>
