--- a/registrati.html
+++ b/registrati.html
@@ -17,14 +17,13 @@
         <table>
             <form method="post" action="" name="registration">
             <tr><td><input type="text" placeholder="Nome" name="nome"></td><td><input type="text" placeholder="Cognome" name="cognome"></td></tr>
-            <tr><td><input type="text" placeholder="CID" name="cid"></td><td><input type="email" placeholder="e-mail" name="email"></td></tr>
-            <tr><td><input type="password" placeholder="password" name="pw"></td><td><input type="password" placeholder="confirm password" name="confirmpw"></td></tr>
+            <tr><td><input type="text" placeholder="CID" name="cid"></td><td><input type="email" placeholder="E-mail" name="email"></td></tr>
+            <tr><td><input type="password" placeholder="Password" name="pw"></td><td><input type="password" placeholder="Conferma password" name="confirmpw"></td></tr>
             <tr><td colspan="2"><input type="submit" name="Iscriviti"></td></tr>
             </form>
         </table>
         <h2>Istruzioni</h2>
-        <p> Inserire il nome e il cognome, nel campo CID va inserito il codice della carta di identita, l'email verra usata per avvisarvi di eventuali votazioni future
-            e i campi password sono due per la conferma della password
+        <p> Inserire il nome e il cognome, nel campo CID va inserito il codice della carta di identit&agrave, l'e-mail verra usata per avvisarvi di eventuali votazioni future e per il recupero dell'account in caso di smarrimento delle credenziali.
         </p>
     </div>
     <footer>
