--- a/index.html
+++ b/index.html
@@ -5,41 +5,44 @@
 <title>Login</title>
 <link href="css/login_style.css" rel="stylesheet" type="text/css">
 </head>
-<body> 
-        <header>
-            <img src="img/testata1.png" alt="img_testata">
-        </header>
+<body>  
+    <div id="cont">
+    <header>
+        <img src="img/testata1.png" alt="img_testata">
+    </header>
     <div id="main_page">
-        <article>
-            <h1>Portale del votante</h1>
-            <p>
-                Benvenuto nel nuovo portale ideato per permettere ai cittadini di Roma capitale di votare da casa.
-                Se &egrave la prima volta che visiti questo portale devi prima iscriverti <a href="registrati.html">qui</a> 
-            </p>
-        </article>
+    <article>
+        <h1>Portale del votante</h1>
+        <p>
+            Benvenuto nel nuovo portale ideato per permettere ai cittadini di Roma capitale di votare da casa.
+            Se &egrave la prima volta che visiti questo portale devi prima iscriverti <a href="registrati.html">qui</a> 
+        </p>
+    </article>
     <div id="login_area"> 
-        <h1>Accedi per votare</h1>
-    <table>
-        <form method="post" action="" name="login">
-            <tr><td><input type="text" name="name" placeholder="ID"></td><td><input type="password" name="password" placeholder="Password"></td></tr>
-        	<tr>
-                <td colspan="2">
-                    <input type="submit" name="Accedi" onClick="login()"> 
-           	        <input type="button" value="Registrati" onClick="window.location.href='registrati.html'">
-                </td>
-            </tr>
-            <tr>                
-                <td colspan="2">
-                    <a href="./pwlost.html">Password dimenticata</a>
-                </td>
-            </tr>
-        </form>   
-    </table>
+            <h1>Accedi per votare</h1>
+            <table>
+                <form method="post" action="" name="login">
+                    <tr><td><input type="text" name="name" placeholder="ID"></td><td><input type="password" name="password" placeholder="Password"></td></tr>
+            	    <tr>
+                        <td colspan="2">
+                            <input type="submit" name="Accedi" onClick="login()"> 
+           	                <input type="button" value="Registrati" onClick="window.location.href='registrati.html'">
+                        </td>
+                    </tr>
+                    <tr>                
+                        <td colspan="2">
+                            <a href="./pwlost.html">Password dimenticata</a>
+                        </td>
+                    </tr>
+                </form>   
+            </table>
+        </div>
     </div>
+    <div id="push"></div>   
+    <footer>
+        <p>Progetto LTW Davide Di Campi e Tiziano Colagrossi &copy; 2018</p>    
+    </footer>
     </div>
- <footer>
-    <p>Progetto LTW Davide Di Campi e Tiziano Colagrossi &copy; 2018</p>    
-</footer>
 </body>
 <script async src="js/logic.js"></script>
 </html> 
