modifiche agli html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <tr><td><input type="text" name="name" placeholder="ID"></td><td><input type="password" name="password" placeholder="Password"></td></tr>
             	    <tr>
                         <td colspan="2">
-                            <input type="submit" name="Accedi" onClick="login()"> 
+                            <input type="submit" name="Accedi" onClick=login()> 
            	                <input type="button" value="Registrati" onClick="window.location.href='registrati.html'">
                         </td>
                     </tr>
