--- a/registrati.html
+++ b/registrati.html
@@ -20,7 +20,7 @@
                 <tr><td><input type="text" placeholder="Nome" name="nome"></td><td><input type="text" placeholder="Cognome" name="cognome"></td></tr>
                 <tr><td><input type="text" placeholder="CID" name="cid"></td><td><input type="email" placeholder="E-mail" name="email"></td></tr>
                 <tr><td><input type="password" placeholder="Password" name="pw"></td><td><input type="password" placeholder="Conferma password" name="confirmpw"></td></tr>
-                <tr><td colspan="2"><input type="submit" name="Iscriviti"></td></tr>
+                <tr><td colspan="2"><input type="submit" name="Iscriviti" onClick=register()></td></tr>
                 </form>
             </table>
             <h2>Istruzioni</h2>
