aggiunta class campo

--- a/registrati.html
+++ b/registrati.html
@@ -17,12 +17,12 @@
             <h1>Registrati</h1>
             <table>
                 <form method="post" action="" name="registration">
-                <tr><td><input type="text" placeholder="Nome" name="nome"></td><td><input type="text" placeholder="Cognome" name="cognome"></td></tr>
-                <tr><td><input type="text" placeholder="CID" name="cid"></td><td><input type="email" placeholder="E-mail" name="email"></td></tr>
-                <tr><td><input type="password" placeholder="Password" name="pw"></td><td><input type="password" placeholder="Conferma password" name="confirmpw"></td></tr>
-                <tr><td><input type="text" name="cod_fi" placeholder="Codice Fiscale"></td>
+                <tr><td><input class="campo" type="text" placeholder="Nome" name="nome"></td><td><input class="campo" type="text" placeholder="Cognome" name="cognome"></td></tr>
+                <tr><td><input class="campo" type="text" placeholder="CID" name="cid"></td><td><input class="campo" type="email" placeholder="E-mail" name="email"></td></tr>
+                <tr><td><input class="campo" type="password" placeholder="Password" name="pw"></td><td><input class="campo" type="password" placeholder="Conferma password" name="confirmpw"></td></tr>
+                <tr><td><input class="campo" type="text" name="cod_fi" placeholder="Codice Fiscale"></td>
                     <td>
-                        <select size="1" cols="15" name="municipio">
+                        <select class="campo" size="1" cols="15" name="municipio">
                             <option selected value="---">---</option>
                             <option value="m1">Municipio 1</option>
                             <option value="m2">Municipio 2</option>
