--- a/registrati.html
+++ b/registrati.html
@@ -20,7 +20,7 @@
                 <tr><td><input type="text" placeholder="Nome" name="nome"></td><td><input type="text" placeholder="Cognome" name="cognome"></td></tr>
                 <tr><td><input type="text" placeholder="CID" name="cid"></td><td><input type="email" placeholder="E-mail" name="email"></td></tr>
                 <tr><td><input type="password" placeholder="Password" name="pw"></td><td><input type="password" placeholder="Conferma password" name="confirmpw"></td></tr>
-                <tr><td><input type="text" name="cod_fi" placeholder="Codice Fiscale"></td>
+                <tr><td><input type="text" name="cf" placeholder="Codice Fiscale"></td>
                     <td>
                         <select size="1" cols="15" name="municipio">
                             <option selected value="---">---</option>
