--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>Accedi per votare</h1>
             <table>
                 <form method="post" action="" name="login">
-                    <tr><td><input type="text" name="name" placeholder="ID"></td><td><input type="password" name="password" placeholder="Password"></td></tr>
+                    <tr><td><input type="text" name="name" placeholder="ID" maxlength="16"></td><td><input type="password" name="password" placeholder="Password" maxlength="30"></td></tr>
             	    <tr>
                         <td colspan="2">
                             <input type="submit" name="Accedi" onClick="login()"> 
