modifica campo municipio select

--- a/registrati.html
+++ b/registrati.html
@@ -23,7 +23,7 @@
                 <tr><td><input type="text" name="cf" placeholder="Codice Fiscale"></td>
                     <td>
                         <select class="campo" size="1" cols="15" name="municipio">
-                            <option selected value="---">---</option>
+                            <option selected value="---">Inserisci municipio</option>
                             <option value="m1">Municipio 1</option>
                             <option value="m2">Municipio 2</option>
                             <option value="m3">Municipio 3</option>
