Changes to be committed: 	modified:   js/logic.js 	modified:   pwlost.html

--- a/pwlost.html
+++ b/pwlost.html
@@ -20,7 +20,7 @@
             <div>
             	<form method="post" action="" name="registration">
                 <tr><td><input type="text" placeholder="CID" name="cid"></td></tr>
-                <tr><td colspan="2"><input type="submit" name="Recover_CID" onclick="recoverPw()"></td></tr>
+                <tr><td colspan="2"><input value="Recupera password"type="button" name="Recover_CID" onclick="recoverPw()"></td></tr>
             </div>
         	<div id="hiddenText" hidden>
         		Abbiamo inviato un codice segreto all'E-mail associata alla Carta d'Identit&agrave inserita
