--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Portale del votante</h1>
         <p>
             Benvenuto nel nuovo portale ideato per permettere ai cittadini di Roma capitale di votare da casa.
-            Se &egrave la prima volta che visiti questo portale devi prima iscriverti <a href="registrati.html">qui</a> 
+            Se &egrave la prima volta che visiti questo portale devi prima iscriverti <a href="registrati.html">qui</a>.
         </p>
     </article>
     <div id="login_area"> 
