Changes to be committed: 	modified:   css/pwlost_style.css 	modified:   pwlost.html

--- a/pwlost.html
+++ b/pwlost.html
@@ -14,23 +14,31 @@
                     <li><a href="index.html">Torna alla Home</a></li>
                 </ul>
             </nav>
-            <div>
-            	Inserire il codice della Carta d'Identit&agrave :
-            </div>
-            <div>
+            <p>
+                Inserire il codice della Carta d'Identit&agrave :
+            </p>
+
+            <table class="frm">
             	<form method="post" action="" name="registration">
-                <tr><td><input type="text" placeholder="CID" name="cid"></td></tr>
-                <tr><td colspan="2"><input value="Recupera password"type="button" name="Recover_CID" onclick="recoverPw()"></td></tr>
-            </div>
+                <tr><td><input type="text" placeholder="CID" name="cid"></td>
+                <td><input value="Recupera password"type="button" name="Recover_CID" onclick="recoverPw()"></td>
+            </table>
         	<div id="hiddenText" hidden>
-        		Abbiamo inviato un codice segreto all'E-mail associata alla Carta d'Identit&agrave inserita
-        		<br>
-        		Inserisci il codice :
-        		<div>
-        			<input type="text" placeholder="Codice" name="code">
-        			<input type="submit" name="Recover_Code" onclick="insertSecretCode()">
-        		</div>
-        	</div>
+                <table class="frm">
+        		<tr>
+                    <td colspan="2">
+                    Abbiamo inviato un codice segreto all'E-mail associata alla Carta d'Identit&agrave inserita
+        		    <br>
+        		    Inserisci il codice :
+                    </td>
+                </tr>
+                <tr>
+        			<td colspan="2"><input type="text" placeholder="Codice" name="code"><input type="submit" name="Recover_Code" onclick="insertSecretCode()"></td>
+        			
+        		</tr>
+        	</table>
+            </div>
+            
         </div>
         <div id="push"></div>
         <footer>
