--- a/pwlost.html
+++ b/pwlost.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Registrazione</title>
+<title>Recupero	 password</title>
 <link href="css/pwlost_style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -33,8 +33,8 @@
                     </td>
                 </tr>
                 <tr>
-        			<td colspan="2"><input type="text" placeholder="Codice" name="code"><input type="submit" name="Recover_Code" onclick="insertSecretCode()"></td>
-        			
+        			<td colspan="2"><input type="text" placeholder="Codice" name="code">
+        							<input type="button" value="Invia" name="Recover_Code" onclick="insertSecretCode()"></td>
         		</tr>
         	</table>
             </div>
