--- a/registrati.html
+++ b/registrati.html
@@ -14,7 +14,6 @@
                     <li><a href="index.html">Torna alla Home</a></li>
                 </ul>
             </nav>
-            <h1>Registrati</h1>
             <table>
                 <form method="post" action="" name="registration">
                 <tr><td><input type="text" placeholder="Nome" name="nome" pattern="[A-Za-z]+" required></td>
@@ -45,7 +44,7 @@
                         </select>
                     </td>
                 </tr>
-                <tr><td colspan="2"><input type="submit" name="Iscriviti" onclick="register()"></td></tr>
+                <tr><td colspan="2"><input type="button" value="Registrati" name="Iscriviti" onclick="register()"></td></tr>
                 </form>
             </table>
             <h2>Istruzioni</h2>
