modified:   scheda_elettorale.html

--- a/scheda_elettorale.html
+++ b/scheda_elettorale.html
@@ -30,7 +30,7 @@
                         <td>
                            
                             <img src="img/circle.png" class="imgp">
-                            <div class="candidi">
+                            <div class="candidi lista1">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -39,7 +39,7 @@
                         </td>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi">
+                             <div class="candidi lista1">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -49,7 +49,7 @@
                     <tr>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi">
+                             <div class="candidi lista1">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -57,7 +57,7 @@
                         </td>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi">
+                             <div class="candidi lista1">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -71,7 +71,7 @@
                     <tr>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi">
+                             <div class="candidi lista2">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -79,7 +79,7 @@
                         </td>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi">
+                             <div class="candidi lista2">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -89,7 +89,7 @@
                     <tr>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi">
+                             <div class="candidi lista2">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -106,7 +106,7 @@
                     <tr>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi">
+                             <div class="candidi lista3">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -123,7 +123,7 @@
                     <tr>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi">
+                             <div class="candidi lista4">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -140,7 +140,7 @@
                     <tr>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi">
+                             <div class="candidi lista5">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -157,7 +157,7 @@
                     <tr>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi">
+                             <div class="candidi lista6">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -165,7 +165,7 @@
                         </td>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi">
+                             <div class="candidi lista6">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -179,7 +179,7 @@
                     <tr>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi">
+                             <div class="candidi lista7">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -187,7 +187,7 @@
                         </td>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi">
+                             <div class="candidi lista7">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -197,7 +197,7 @@
                     <tr>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                             <div class="candidi">
+                             <div class="candidi lista7">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
@@ -205,7 +205,7 @@
                         </td>
                         <td>
                             <img src="img/circle.png" class="imgp">
-                            <div class="candidi">
+                            <div class="candidi lista7">
                                 <input type="radio" name="candidi" value="nome1">nome cognome1<br>
                                 <input type="radio" name="candidi" value="nome2">nome cognome2<br>
                                 <input type="radio" name="candidi" value="nome3">nome cognome3<br>
