aggiunta barra alla sceda e sistemata la centratura tenendo conto della barra

--- a/profilo.html
+++ b/profilo.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav id="navbar">
-        <div class="icobarcont" id="homebg">
+        <div class="iconbarcontactive" id="homebg">
             <div class="icobar" id="home"></div>
         </div>
         <div class="icobarcont" id="calendarbg">
