--- a/scheda_elettorale.html
+++ b/scheda_elettorale.html
@@ -3,17 +3,30 @@
 <head>
 <meta charset="utf-8">
 <title>Scheda</title>
+<link href="css/prof_style.css" rel="stylesheet" type="text/css">
 <link href="css/tes_style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+     <nav id="navbar">
+        <div class="icobarcont" id="homebg">
+            <div class="icobar" id="home"></div>
+        </div>
+        <div class="icobarcont" id="calendarbg">
+            <div class="icobar" id="calendar"></div>
+        </div>
+        <div class="icobarcont" id="optionbg">
+            <div class="icobar" id="option"></div>
+        </div>
+        <div class="iconbarcontactive" id="votebg">
+            <div class="icobar" id="vote"></div>
+        </div>
+        <div class="icobarcont" id="logoutbg">
+            <div class="icobar" id="logout"></div>
+        </div>
+    </nav>
     <div id="cont">
         <div id="main_content">
-            <nav>
-                <ul>
-                    <li><a href="index.html">Torna alla Home</a></li>
-                </ul>
-            </nav>
             <h1 id="ht">Scheda elettorale</h1>
             <form name="voto" method="post" action="">
                 <table>
