Changes to be committed: 	renamed:    css/prof_style.css -> css/bar_style.css 	new file:   css/profilo_style.css 	modified:   css/tes_style.css 	new file:   img/256px-Default_profile_picture.jpg 	modified:   profilo.html 	modified:   scheda_elettorale.html

--- a/profilo.html
+++ b/profilo.html
@@ -3,25 +3,38 @@
 <head>
 <meta charset="utf-8">
 <title>Utente</title>
-<link href="css/prof_style.css" rel="stylesheet" type="text/css">
+<link href="css/bar_style.css" rel="stylesheet" type="text/css">
+<link href="css/profilo_style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <nav id="navbar">
-        <div class="iconbarcontactive" id="homebg">
+   <nav id="navbar">
+        <a href="profilo.html"><div class="icobarcontactive" id="homebg">
             <div class="icobar" id="home"></div>
-        </div>
-        <div class="icobarcont" id="calendarbg">
+        </div></a>
+        <a href="cal.html"><div class="icobarcont" id="calendarbg">
             <div class="icobar" id="calendar"></div>
-        </div>
-        <div class="icobarcont" id="optionbg">
+        </div></a>
+        <a href="opt.html"><div class="icobarcont" id="optionbg">
             <div class="icobar" id="option"></div>
-        </div>
-        <div class="icobarcont" id="votebg">
+        </div></a>
+        <a href="scheda_elettorale.html"><div class="icobarcont" id="votebg">
             <div class="icobar" id="vote"></div>
-        </div>
-        <div class="icobarcont" id="logoutbg">
+        </div></a>
+        <a href="index.html"><div class="icobarcont" id="logoutbg">
             <div class="icobar" id="logout"></div>
-        </div>
+        </div></a>
     </nav>
+    <div id="cont">
+        <div id="main_content">
+            <header>
+                <img src="img/256px-Default_profile_picture.jpg">
+                <figcaption>
+                    <h1>Nome Cognome</h1>
+                    <h2>ID: XXDDDDDDD</h2><h2>MUNICIPIO: XX</h2>
+                </figcaption>
+
+            </header>
+        </div>
+    </div>
 </body>
 </html>
