--- a/scheda_elettorale.html
+++ b/scheda_elettorale.html
@@ -3,27 +3,27 @@
 <head>
 <meta charset="utf-8">
 <title>Scheda</title>
-<link href="css/prof_style.css" rel="stylesheet" type="text/css">
+<link href="css/bar_style.css" rel="stylesheet" type="text/css">
 <link href="css/tes_style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
      <nav id="navbar">
-        <div class="icobarcont" id="homebg">
+        <a href="profilo.html"><div class="icobarcont" id="homebg">
             <div class="icobar" id="home"></div>
-        </div>
-        <div class="icobarcont" id="calendarbg">
+        </div></a>
+        <a href="cal.html"><div class="icobarcont" id="calendarbg">
             <div class="icobar" id="calendar"></div>
-        </div>
-        <div class="icobarcont" id="optionbg">
+        </div></a>
+        <a href="opt.html"><div class="icobarcont" id="optionbg">
             <div class="icobar" id="option"></div>
-        </div>
-        <div class="iconbarcontactive" id="votebg">
+        </div></a>
+        <a href="scheda_elettorale.html"><div class="icobarcontactive" id="votebg">
             <div class="icobar" id="vote"></div>
-        </div>
-        <div class="icobarcont" id="logoutbg">
+        </div></a>
+        <a href="index.html"><div class="icobarcont" id="logoutbg">
             <div class="icobar" id="logout"></div>
-        </div>
+        </div></a>
     </nav>
     <div id="cont">
         <div id="main_content">
