Changes to be committed: 	modified:   diarioDiBordo.txt 	new file:   js/scheda_elettorale.js 	modified:   scheda_elettorale.html

--- a/scheda_elettorale.html
+++ b/scheda_elettorale.html
@@ -37,7 +37,7 @@
                     </tr>
                     <tr class="space"></tr>
                     <tr>
-                        <th colspan="2"><h1>NOME LISTA1</h1><h4>(nome cognome)<input type="radio" name="lista" value="1"></h4</th>
+                        <th colspan="2"><h1>NOME LISTA1</h1><h4>(nome cognome)<input type="radio" name="lista" value="1"></h4></th>
                     </tr>
                     <tr>
                         <td>
@@ -187,7 +187,7 @@
                     </tr>
                     <tr class="space"></tr>
                     <tr>
-                        <th colspan="2"><h1>NOME LISTA7</h1><h4>(nome cognome)<input type="radio" name="lista" value="2"></h4></th>
+                        <th colspan="2"><h1>NOME LISTA7</h1><h4>(nome cognome)<input type="radio" name="lista" value="7"></h4></th>
                     </tr>
                     <tr>
                         <td>
@@ -228,7 +228,7 @@
                     <tr class="space"></tr>
                     <tr>
                         <td colspan="2" class="cont_btn">
-                            <input type="button" value="Invia"> 
+                            <input type="button" value="Invia" onclick="inviaVoto()"> 
                         </td>
                     </tr>
                     
@@ -242,5 +242,5 @@
         </footer>-->
     </div>    
 </body>
-<script async src="js/logic.js"></script>
+<script async src="js/scheda_elettorale.js"></script>
 </html>
