Changes to be committed: 	new file:   css/opt_style.css 	modified:   index.html 	new file:   opt.html 	modified:   registrati.html

--- a/registrati.html
+++ b/registrati.html
@@ -20,8 +20,8 @@
                 	<td><input type="text" placeholder="Cognome" name="cognome" pattern="[A-Za-z]+" required></td></tr>
                 <tr><td><input type="text" placeholder="CID" name="cid" required></td>
                 	<td><input type="email" placeholder="E-mail" name="email" required></td></tr>
-                <tr><td><input type="password" placeholder="Password" name="pw" required></td>
-                	<td><input type="password" placeholder="Conferma password" name="confirmpw" required></td></tr>
+                <tr><td><input type="password" placeholder="Password" name="pw" maxlength="20" required></td>
+                	<td><input type="password" placeholder="Conferma password" name="confirmpw" maxlength="20" required></td></tr>
                 <tr><td><input type="text" name="cf" placeholder="Codice Fiscale" required></td>
                     <td>
                         <select class="campo" size="1" cols="15" name="municipio" required>
