agg linkl css js

--- a/cal_std/test.html
+++ b/cal_std/test.html
@@ -6,7 +6,7 @@
   <title>Calendario</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css'>
-      <link rel="stylesheet" href="css/cal_style.css"> 
+      <link rel="stylesheet" href="css_/cal_style_std.css"> 
 </head>
 
 <body>
@@ -176,7 +176,7 @@ function fill_table(month, month_length, indexMonth) {
 </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery.cycle2/2.1.6/jquery.cycle2.core.min.js'></script>
-    <script  src="js/cal.js"></script>
+    <script  src="js_/cal_std.js"></script>
 </body>
 
 </html>
