--- a/cal.html
+++ b/cal.html
@@ -12,7 +12,7 @@
             <nav id="navbar">
                 <a href="profilo.html"><div class="icobarcont" id="homebg">
             <div class="icobar" id="home"></div>
-            </div></a>
+            </div>a>
             <a href="cal.html"><div class="icobarcontactive" id="calendarbg">
                 <div class="icobar" id="calendar"></div>
             </div></a>
@@ -28,9 +28,16 @@
             </nav> 
         
     <div id="cont">
-        <div id="main_content">
-        
-    </div> 
+        <div class="center" id="main_content">
+            <div class="agenda">
+                <div class="today">
+                    <h2>XX MMMMM YYYY</h2>
+                </div>
+            </div>
+            <div class="calendario">
+                calendario
+            </div>
+        </div> 
     </div>
 </body>
 <script async src="js/logic.js"></script>
