sistemato tag a profilo

--- a/cal.html
+++ b/cal.html
@@ -12,7 +12,7 @@
             <nav id="navbar">
                 <a href="profilo.html"><div class="icobarcont" id="homebg">
             <div class="icobar" id="home"></div>
-            </div>a>
+            </div></a>
             <a href="cal.html"><div class="icobarcontactive" id="calendarbg">
                 <div class="icobar" id="calendar"></div>
             </div></a>
