--- a/cal.html
+++ b/cal.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Opzioni</title>
+<title>Calendario</title>
 <link href="css/bar_style.css" rel="stylesheet" type="text/css">
 <link href="css/cal_style.css" rel="stylesheet" type="text/css">
 </head>
